<resources>
    <string name="app_name">ChitYogSadhana</string>
    <string name="no_connection">There is a problem with your internet connection.</string>
    <string name="forgot_pass1">Enter your email address and we\'ll send you a confirmation email!</string>
    <string name="chit_yog">\u2022 Chit Yog Sadhana is based on ancient wisdom and time-tested methods that helps us to understand that until a holistic approach is followed, we will stay dis-connected from our Chit and keep suffering at every level\n\n
\u2022 Chit Yog Sadhana shows us how the coverings to our Chit are formed by our mind making wrong choices (called Pragya-aparadh in Sanskrit), which leads to a dis-connection between Mind, Body and Chit. \n\n
\u2022 Chit Yog Sadhana tells us that whenever we are dis-connected from our Chit, problems will come our way. \n\n
\u2022 Chit Yog Sadhana is a process to remove these coverings one by one and bring harmony between Mind, Body and Chit. \n\n
\u2022 Chit Yog Sadhana is a pathway to connect to our pure consciousness and to overcome our ailments at all levels; physical, mental and emotional. \n\n
\u2022 Chit Yog Sadhana empowers us to overcome these problems through our own efforts, rather than seeking help from others or looking to mask our problems with pills or potions. \n\n
\u2022 Chit Yog Sadhana helps us remove the root cause of our suffering, layer by layer, by following simple, practical routines in our day to day life so we can enjoy the benefits of our own awareness.\n\n
\u2022 Chit Yog Sadhana is path of action\n</string>
    <string name="chit">Chit is a Sanskrit word meaning awareness or consciousness:\n\n
\u2022 True awareness or to be aware of \n\n
\u2022 To understand.\n\n
\u2022 To comprehend\n\n

       \n\n It is the core principle in all levels of progress in life, physical, mental and spiritual.\n\n
        \u2022 Chit is our true self.  \n\n
\u2022 Chit is our identity\n\n
\u2022 Chit caries all the memories that impact on our actions, thoughts and deeds. \n\n
\u2022 Chit is our protection from all sorts of problems; physical, mental or emotional.  \n\n

As long as we are connected to our Chit, we can keep ourselves away from any physical, mental and emotional problems.\n\n The moment we get dis-connected from our Chit, these problems start building.
This dis-connection starts when we make wrong choices through our actions, deeds and thoughts. These wrong choices create a covering over our Chit, dis-connecting us from our true, inner self. \n\n</string>
    <string name="aim">Chit Yog Sadhana is designed to  \n\n
        \u2022 Bring wellbeing, peace, calmness and freedom from ailments; \n\n
        \u2022 Enable us to reveal our inner core.\n\n
        \u2022 Help us realise pain and suffering are our own creation and we can correct them; \n\n
        \u2022 Enhance awareness that peace is inside us all; \n\n
        \u2022 Enable us to face the world with courage and honesty. \n\n
    </string>
    <string name="one_intro">This stage of Chit Yog Sadhana comprises various daily routines to cleanse and strengthen your body, which builds the foundation for the next stage. Each action will strengthen your body and mind and prepare you to embark on the next stage of your journey, where you will burn the layers covering your Chit and make your way through the darkness of mental and emotional problems to the light at the end of the tunnel. \n\n
    You will follow these daily regimes for 30 days.\n
    </string>
    <string name="step1_1">1. Get up early</string>
    <string name="step1_1_detail">You should wake up between 5.00–5.30 am as this time is considered a time of pure consciousness (Brahma Muhurta). In Vedic philosophy, it is said that from 3.30am till sunrise it is easier to connect to your Chit as the coverings are less potent during this time and our Chit has the natural ability to move upwards towards its source.
\n\nThe qualities of the environment at this time are pure, calm, clear and vibrant so our mind is calm, clear and stable and has the ability to connect easily with the body.
\n\nOn a physical level waking up during this period provides more clarity, stability in thoughts and actions as well as more vitality and energy. </string>
    <string name="step1_2">2. Brush your teeth and scrape your tongue</string>
    <string name="step1_2_detail">You should brush your teeth and scrape your tongue as soon as you wake up.
\n\nHave you ever noticed the coating on your tongue when you wake up? This is a sure sign you are dis-connected from your Chit. If you don’t remove this coating within 3 minutes of waking up, it will be re-absorbed and create more coating on your Chit.
\n\nThe colour of the coating will give you an idea of the type of problems you have. A cream or brown coating is a sign you suffer from anxiety, worries, or fear. Those suffering from anger, frustration, jealously, hatred or stress will have a yellowish coating while a thick, white coating is a sign you suffer from depression or possessiveness.</string>
    <string name="step_1_3">3. Make a morning de-tox drink</string>
    <string name="step_1_3_detail">Make a drink first thing in the morning. To a glass of warm water add,\n
\u2022 ½ teaspoon of grated ginger\n
\u2022 ½ teaspoon of honey\n
\u2022 ½ teaspoon of lemon juice\n
\nThis helps to flush the toxins from the gut before they get re-absorbed. If you suffer from various emotional problems, you will always have a build-up of toxins in your gut and this helps to flush them out. If not, these toxins ultimately create another covering on your Chit</string>
    <string name="step_1_4">4. Nasya (nasal drops)</string>
    <string name="step_1_4_detail">Every morning, put three drops of warm, cold pressed black sesame oil in each nostril and massage around the eyes and nose three times.
\n\nWhen dis-connected from your Chit you tend to feel a lack of enthusiasm or lack of cheerfulness, don’t feel like talking to anyone or get irritated and impatient easily. These drops help to counter these emotions and help to remove the covering from your Chit.
\n\nHow to use: Put the dropper bottle in a container of hot water for 10-15 minutes until the bottle feels warm. Then tilt your head back and apply the drops to your nose.
</string>
    <string name="step_1_5">6. Avoid hot showers</string>
    <string name="step_1_5_detail">Another sure sign you are dis-connected from your Chit is a desire for a hot shower. The more dis-connected you feel, the hotter the shower but this is counter-productive. This heat affects the pituitary and pineal glands which impacts on the secretion of serotonin, making a person feel dull, heavy and lacking in enthusiasm.
\n\nTo know if your shower is too hot, check if the steam rises above your head. If it does, it is too hot. Also, when you finish the shower, if you have reddish skin, the shower was too hot.</string>
    <string name="step_1_6">5. Self-massage with warm oil</string>
    <string name="step_1_6_detail">Every morning, before your shower, massage your body with warmed, cold-pressed black sesame oil in upward circular motion.
\n\nIf you experience emotions such as anxiety, worries, fear or confusion, you will always have a stiff and tight body, your hands and feet will be cold and your skin, dry. If you suffer from anger, frustration, jealousy or hatred your body will always be hot with skin rashes and boils while if you feel greed, depression or suicidal thoughts you will always have a sluggish lymphatic system which stagnates your energy flow. All these symptoms are signs of how dis-connected you are from your Chit.
\n\nDaily massage helps to improve circulation and flush toxins from the lymphatic system, allowing bodily energy to flow more rhythmically.  </string>
    <string name="step_1_7">7. Deep breathing</string>
    <string name="step_1_7_detail">At least three times a day, pause and take 10-15 long, deep, slow breaths through the nose.
\n\nShallow breathing is an indicator you are dis-connected from your Chit, so this helps to provide more fresh oxygen, which brings more vitality, vigour and ability connect to your Chit. </string>
    <string name="step_1_8">8. Morning and evening walk</string>
    <string name="step_1_8_detail">Every day, go for a 30-minute walk; once at around 6.00 am. and again at 6.00 pm
\n\nThis helps to bring more vitality, vigour and alertness. It loosens the body, improves circulation, bring more
groundedness and stablises the immune system. Until or unless you are physically and mentally strong and stable you cannot achieve the goal to connect with your Chit. </string>
    <string name="extra_1">If you are suffering from anger, frustration or jealousy. They are also effective for people suffering
from burning eyes or high blood pressure:</string>
    <string name="green_grass">1. Walk of the green grass</string>
     <string name="green_grass_detail">Every morning, while the dew is still on the grass, walk barefoot on the
grass for 5 minutes.
\nThis helps to bring more groundedness as well as providing more freshness, alertness and clarity to the mind which helps to overcome the thoughts of dullness, stress, anger and anxiety which are core elements
that keep us dis-connected from our Chit
     </string>
    <string name="pore_rose">2. Pure rose water soaked eye pads on eyes.</string>
    <string name="pore_rose_detail">Put eye pads soaked in pure rose water on both eyes and leave for one minute. Remove the pads and you’ll notice they are warm. Repeat this process three times. Finally, splash the eyes will normal water
\nIf you are dis-connected from your Chit you can have sore, red, dry and burning eyes and can feel tired every day. This regime helps to keep your eyes fresher and alert
</string>
    <string name="extra_2">If you are suffering from lack of enthusiasm or depression:</string>
    <string name="sun">1. Look at the rising sun</string>
    <string name="sun_detail">Every morning, while the sun is still on the horizon, look towards the rising sun
for 15 seconds and then close your eyes but keep facing the sun. You will notice dark red colour in front of your eyes. If you are dis-connected from your Chit you will see a dark hole in this red colour. The larger the hole, the more covering on your Chit.
\nPerform this every morning for 3 minutes. Once you start connecting to your Chit, you will notice those holes disappear and the colour in front of your eyes will become brighter red and without holes. The day you are connected to Chit and it is stable, that red layer will start turning a reddish, golden yellow.
\n\nNB: Never look at the sun if it is above the horizon, when the rays are white</string>
    <string name="gandoosh">2. Gandoosh</string>
    <string name="gandoosh_deatil">Once a week, prepare the following:\n
\u2022 1 tablespoon of sesame oil\n
\u2022 1 teaspoon of honey\n
\u2022 ½ teaspoon of black pepper\n
\u2022 ½ teaspoon of black salt\n\n

Hold in your mouth and move around for 3 minutes then spit and rinse with warm water.
\nWhen you are dis-connected from your Chit you will either have a dry mouth or excessive saliva and soreness in the back of throat. Sometimes, the gums can start bleeding. This regime will minimise this impact.</string>
</resources>