<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context="com.cityogsadana.activity.introduction.LevelOneActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/include2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one_intro"
                android:textColor="@color/text_color"
                android:textSize="@dimen/app_text_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step1_1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step1_1_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_1_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step1_2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step1_2_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_2_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_3_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_3_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_4_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_4_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_5_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_6_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_6_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_7"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_7_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_7_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/step_1_8"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/app_text_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:text="@string/step_1_8_detail"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


                <TextView
                    android:id="@+id/step_8_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_square"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="Set Alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/app_text_size_medium" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/include2"
        layout="@layout/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <include
        layout="@layout/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    </include>
</RelativeLayout>
